fix the FE pagination
Signed-off-by: Murphy <mofei@starrocks.com>