@@ -36,6 +36,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class TaskRunHistory {
     private static final Logger LOG = LogManager.getLogger(TaskRunHistory.class);
@@ -119,10 +120,28 @@ public class TaskRunHistory {
     }
 
     public List<TaskRunStatus> lookupHistory(TGetTasksParams params) {
-        List<TaskRunStatus> result = getInMemoryHistory().stream()
-                .filter(x -> x.match(params))
-                .collect(Collectors.toList());
-        if (isEnableArchiveHistory()) {
+        List<TaskRunStatus> memoryList = getInMemoryHistory().stream().filter(x -> x.match(params)).toList();
+        Stream<TaskRunStatus> stream = memoryList.stream().sorted(TaskRunStatus.COMPARATOR_BY_CREATE_TIME_DESC);
+        if (params.isSetPagination()) {
+            if (params.getPagination().getOffset() > 0) {
+                stream = stream.skip(params.getPagination().getOffset());
+            }
+            if (params.getPagination().getLimit() > 0) {
+                stream = stream.limit(params.getPagination().getLimit());
+            }
+        }
+        List<TaskRunStatus> result = stream.collect(Collectors.toList());
+
+        // calculate the new offset & limit for history table
+        long newOffset = params.getPagination().getOffset() - memoryList.size();
+        newOffset = Math.max(0, newOffset);
+        long newLimit = params.getPagination().getLimit() - result.size();
+        newLimit = Math.max(0, newLimit);
+
+        params.getPagination().setOffset(newOffset);
+        params.getPagination().setLimit(newLimit);
+
+        if (isEnableArchiveHistory() && newLimit > 0) {
             result.addAll(historyTable.lookup(params));
         }
         return result;
